<resources>
    <string name="app_name">BC QR for Shop</string>
    <string name="app_name_dev">BC QR for Shop(Dev)</string>

    <!-- ============================== -->
    <!-- Common -->
    <!-- ============================== -->
    <string name="title_info">알림</string>
    <string name="title_update">업데이트</string>

    <string name="btn_ok">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_update">업데이트</string>
    <string name="btn_move">이동</string>
    <string name="btn_search">조회</string>
    <string name="btn_setting">설정</string>
    <string name="btn_share">내보내기</string>
    <string name="btn_allowable">허용</string>
    <string name="btn_finish">종료</string>
    <string name="btn_close">닫기</string>
    <string name="btn_detail">내역보기</string>

    <!-- ============================== -->
    <!-- Intro -->
    <!-- ============================== -->
    <string name="msg_fake">앱 위변조가 탐지되었습니다. 앱을 종료합니다.</string>
    <string name="msg_is_update">업데이트 정보가 있습니다.</string>
    <string name="msg_update">업데이트 정보가 있습니다.\n최신버전으로 업데이트를 진행 하시겠습니까?</string>
    <string name="msg_update_force">업데이트 정보가 있습니다.\n업데이트 페이지로 이동 합니다.</string>

    <string name="msg_permission_denied">필수적 접근 권한에 동의하셔야 앱 이용이 가능합니다. 단말기의 앱 권한 설정 화면으로 이동하시겠습니까?</string>
    <string name="msg_droidx_permission_denied">안전한 거래를 위해 사용하는 백신프로그램(DroidX) 실행을 위해 파일 접근권한이 필요합니다. 백신프로그램이 동작하지 않으면 프로그램을 실행할수 없습니다.</string>
    <string name="msg_file_make_fail">이미지 파일 생성에 실패하였습니다.</string>

    <string name="msg_not_connect_network">네트워크 연결을 확인해 주세요.</string>
    <string name="msg_grant_check">기기정보 사용 권한획득 진행중</string>
    <string name="msg_grant_check_fail">기기정보 사용 권한획득 실패</string>
    <string name="msg_version_info_check">버전정보 확인중</string>
    <string name="msg_base_info_success">기본정보 수신이 완료되었습니다.</string>
    <string name="msg_base_info_fail">기본정보 수신에 실패하였습니다.</string>
    <string name="msg_logout">다시 로그인해 주세요.</string>

    <string name="msg_qr_share_url_fail">Qr 이미지 경로가 정상적이지 않습니다. 잠시후에 다시 시도해 주세요.</string>

    <!-- 한국종료 -->
    <string name="msg_finish_app">앱을 종료하시겠습니까?</string>

    <!-- Strings for Droid-X -->
    <!-- 샘플 프로젝트의 droidxrunner.xml 문구 -->
    <string name="sample_dx_intro">보안검사 진행중</string>
    <string name="sample_dx_intro_step1">엔진/패턴 업데이트</string>
    <string name="sample_dx_intro_step2">시스템 위변조 점검</string>
    <string name="sample_dx_intro_step3">악성코드 및 불법 앱 점검</string>

    <!-- 샘플 프로젝트의 리스너에서 사용되는 문구 -->
    <string name="sample_noti_no_certification">Droid-X 서비스를 시작하기위한 환경이 적절하지 않습니다.</string>
    <string name="sample_noti_ditecting_rooting">본 디바이스에서 루팅이 탐지되었습니다.\n\n코드 : </string>
    <string name="sample_update_percent">업데이트 진행용량 - </string>
    <string name="sample_title_alert">경고</string>
    <string name="sample_btn_service_stop">종료</string>

    <!-- 샘플 악성앱 탐색 결과 리스트에서 사용하는 팝업 문구 -->
    <string name="sample_malwarelist_title">검사 결과</string>
    <string name="sample_malware_names">패키지 이름</string>
    <string name="sample_select_all">전체 선택</string>
    <string name="sample_alert_no">취소</string>
    <string name="sample_del">삭제</string>
    <string name="sample_txt_scanresult_scan_number">검사 수 : </string>
    <string name="sample_txt_scanresult_detected_number"> 발견 수 : </string>

    <!-- 샘플 악성앱 탐색 결과 리스트에서 사용하는 팝업 문구 -->
    <string name="sample_msg_scanresult_need_to_select">하나 이상의 악성앱을 선택해야 합니다.</string>
    <string name="sample_msg_scanresult_delete_wrong">파일을 삭제하는데 문제가 있습니다.</string>
    <string name="sample_msg_scanresult_complete_del">선택하신 파일을 삭제하였습니다.</string>
    <string name="sample_msg_scanresult_remain_malware">악성 App 및 파일이 %@1 개 남았습니다.</string>

    <!-- 샘플 퍼미션 알림창에서 사용하는 토스트 문구 -->
    <string name="sample_txt_permission_cause_msg">해당 권한은 외부 저장소에 있는 바이러스 탐지를 위한 것입니다.</string>
    <string name="sample_txt_permission_caution_msg">외부저장소 접근 권한이 거절 되었습니다. \n앱실행은 가능하나 바이러스 탐지를 올바르게 하지 못합니다</string>

    <!-- Droid-X 노티피케이션 문구(필수) -->
    <string name="dx_notification_msg">안전하게 보호되고 있습니다.</string>
    <string name="dx_notification_title">Droid-X 3.1 Antivirus</string>

    <!-- Droid-X intro popup 문구(필수) -->
    <string name="dx_intro_message">모바일백신을 구동중입니다.</string>

    <!-- QR Reader -->
    <string name="act_title_qr_reader">QR키트 사용 등록</string>
    <string name="scan">스캔</string>
    <string name="scan_text_info_1">카메라를 통해 QR코드를 스캔해주세요.</string>
    <string name="scan_text_info_2">QR키트 사용 등록 후, QR키트를 이용한 결제가 가능합니다.</string>
    <string name="serial_number">일련번호</string>
    <string name="serial_number_text_info_1">QR키트를 통한 결제를 위해서 QR키트 사용 등록이 필요합니다.</string>
    <string name="serial_number_text_info_2">QR코드를 스캔하거나 QR키트의 일련번호를 입력해주세요.</string>
    <string name="tv_serial_number">일련번호</string>
    <string name="et_serial_number">일련번호를 입력해 주세요</string>

    <!-- QR Share -->
    <string name="qr_share_popup_title">QR이미지를 인쇄하여 매장에서 사용하세요!</string>
    <string name="qr_share_popup_info">App 없이도 QR결제가 가능합니다.</string>

    <!-- Receipt -->
    <string name="receipt_svc_clss_nm_title">브랜드</string>
    <string name="receipt_auth_aton">거래일시</string>
    <string name="receipt_card_co_auth_no_title">승인번호</string>
    <string name="receipt_mpan_no_title">카드번호</string>
    <string name="receipt_ins_trm_title">할부정보</string>
    <string name="receipt_trns_uniq_no_title">거래고유번호</string>
    <string name="receipt_affi_co_trns_uniq_no_title">Vocher No.(凭证号)</string>
    <string name="receipt_dc_bef_amt_title">할인 전 금액</string>
    <string name="receipt_dc_amt_title">할인 금액</string>
    <string name="receipt_dc_aftr_amt_title">할인 후 금액</string>
    <string name="receipt_won">원</string>
    <string name="receipt_auth_stat">승인상태</string>
    <string name="receipt_voucher_help_info">Vocher No.(凭证号)은\n중국 고객 App에 표시되는 승인번호입니다.\n결제 취소 요청 시 Vocher No.(凭证号)를 확인해주세요.</string>

    <string name="act_title_qr_scan">QR스캔 결제</string>
    <string name="act_title_qr_scan_info">페이북 QR 스캔만 가능합니다.</string>

    <string name="dialog_loading_pay">결제가 진행중입니다.\n잠시만 기다려주세요.</string>

    <string name="dialog_scan_permission_denied">카메라 접근 권한이 거절 되어 결제를 진행할 수 없습니다.\n확인을 누르시면 이전화면으로 이동합니다.</string>
    <string name="droidx_addon_detect">원격제어앱 실행이 탐지되어 앱을 이용하실 수 없습니다.</string>

    <string name="dialog_scan_remote_app">\u0020] 원격 지원앱의 작동이 탐지되었습니다.\n앱을 종료됩니다.</string>
</resources>
