<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_close" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="17dp"
            android:text="@string/act_title_qr_reader"
            android:textColor="@color/colorTextBlack"
            android:textSize="26sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_qrreader_tab_normal"
            android:text="@string/scan"
            android:textColor="@color/colorTextGray"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_serial_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_qrreader_tab_normal"
            android:text="@string/serial_number"
            android:textColor="@color/colorTextGray"
            android:textSize="15sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <LinearLayout
            android:id="@+id/layout_zxing_barcode_scanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorQrInfoBox"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/scan_text_info_1"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/scan_text_info_2"
                        android:textColor="@color/colorTextWhiteGray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.journeyapps.barcodescanner.DecoratedBarcodeView
                    android:id="@+id/zxing_barcode_scanner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:zxing_scanner_layout="@layout/custom_scanner" />

                <View
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_gravity="center"
                    android:background="@drawable/camera_edge" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_serial_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@color/colorQrInfoBox"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/serial_number_text_info_1"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/serial_number_text_info_2"
                        android:textColor="@color/colorTextWhiteGray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/tv_serial_number"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/et_serial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:hint="@string/et_serial_number"
                android:inputType="numberDecimal"
                android:theme="@style/edit_text_black_underlined_style"
                app:backgroundTint="@color/colorEtHint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_confirm"
                style="@style/white_17_font_style"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn_confirm"
                android:gravity="center"
                android:text="@string/btn_ok" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>
