<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
             android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/qr_share_popup_title"
                    android:textColor="#555555"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/qr_share_popup_info"
                    android:textColor="#e83d45"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <WebView
            android:id="@+id/wv_qr_share_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="27dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_qr_share_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangle_bg_share_cancel_btn"
                android:text="@string/btn_cancel"
                android:textColor="#555555"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_qr_share_share"
                style="@style/white_15_font_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E73D44"
                android:text="@string/btn_share" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
